added fix to better handle local files